code modified for react props sample

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,27 @@
 
   <body>
     <div id="root"></div>
-    <div id="div1"></div>
-    <div id="div2"></div>
+
+    <!-- <script type="text/babel">
+      var Movie = React.createClass({
+        render: function() {
+          return (
+            <div>
+              <h1>{this.props.title}</h1>
+              <h2>{this.props.desc}</h2>
+            </div>
+          );
+        }
+      });
+
+      ReactDOM.render(
+        <div>
+          <Movie title="Half Girlfriend" desc="romantic" />
+          <Movie title="Avatar" desc="action" />
+          <Movie title="Badla" desc="bollywood" />
+        </div>,
+        document.getElementById("root")
+      );
+    </script> -->
   </body>
 </html>
